<resources>
    <string name="app_name">AuthRegRes</string>
    <string name="account_create_label">Регистрация</string>
    <string name="user_login_text">Введите логин</string>
    <string name="user_email_text">Введите email</string>
    <string name="user_password_text">Введите пароль</string>
    <string name="button_reg_text">Зарегистрироваться</string>
    <string name="main_logo_text_to_speach">Основное лого приложения</string>
    <string name="authorization">Авторизация</string>
    <string name="log_in">Войти</string>
    <string name="create_user_text">Зарегистрироваться</string>
    <string name="first_time_text">Вы у нас впервые?</string>
    <string name="forget_password">Восстановление пароля</string>
    <string name="nav_open">Открыть</string>
    <string name="nav_close">Закрыть</string>
    <string name="in_development">В разработке</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>