<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".Presentation.Authorization">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="serif"
        android:text="@string/authorization"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/main_logo_text_to_speach"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:autofillHints="user"
        android:ems="10"
        android:hint="@string/user_login_text"
        android:inputType="text"
        android:textColor="@color/text_color_white"
        android:textColorHint="@color/text_color_hint" />


    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/user_password_text"
        android:inputType="textPassword"
        android:textColor="@color/text_color_white"
        android:textColorHint="@color/text_color_hint" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="serif"
        android:text="@string/forget_password"
        android:textColor="@color/text_color_white"
        android:textSize="11sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/soft_green"
        android:text="@string/log_in"
        android:textColor="@color/text_color_white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_time_text"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="62dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/first_time_text"
            android:textAlignment="center"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="62dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/account_create_label"
            android:textAlignment="center"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>